[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
structopt = { version = "0.3", default-features = false }
secp256k1 = "0.28.1"
rand = "0.8.5"
hex = "0.4.3"
hmac="0.12.1"
sha2="0.10.8"
